Add new IntelliJ conf options from 13.