@@ -3,6 +3,8 @@
 -XX:MaxPermSize=350m
 -XX:ReservedCodeCacheSize=96m
 -XX:+UseCodeCacheFlushing
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
 -ea
 -Dsun.io.useCanonCaches=false
 -Djava.net.preferIPv4Stack=true
